---------------------------------------------

- v1.0.1030                                 -
---------------------------------------------
- 2020-07-12                                -
---------------------------------------------
.: WSW: Task: Update merchant home page (WSW-71)
.: WSW: Task: Adding loading spinner (WSW-60)
.: WSW: Task: Update home icon (WSW-69)

---------------------------------------------
- 2020-07-11                                -
---------------------------------------------
.: WSM: Story: Quick Menu (WSM-158)

---------------------------------------------
- 2020-07-10                                -
---------------------------------------------
.: WSW: Task: QR code icon is not clear (WSW-69)

---------------------------------------------
- 2020-07-09                                -
---------------------------------------------
.: WSW: Story: Improvement: Better UI in merchant page (WSW-60)

- v1.0.1020                                 -
---------------------------------------------
- 2020-06-28                                -
---------------------------------------------
.: WSW: Task: Change share module from @jemys89/ngx-facebook to ngx-facebook (WSW-64)
.: WSW: BugFix: Preview page keep reload when item is clicked (WSW-65)
.: WSW: Task: Remove modal outlet from project (WSW-66)
.: WSW: Task: Update Favorite Modal Flow (WSW-66)
.: WSW: Task: Update qrcode url (WSW-61)
.: WSW: Task: Prevent reload (WSW-66)

---------------------------------------------
- 2020-06-24                                -
---------------------------------------------
.: WSW: Task: CLONE - Change angular social login package to support Angular 9 Ivy (WSW-62)
.: WSW: Task: Change URL from "shop" to "page" (WSW-61)

---------------------------------------------
- 2020-06-23                                -
---------------------------------------------
.: WSW: Task: CLONE - Module lazy load (WSW-59)

---------------------------------------------