@@ -9,6 +9,7 @@
 .: WSW: Task: Update merchant home page (WSW-71)
 .: WSW: Task: Adding loading spinner (WSW-60)
 .: WSW: Task: Update home icon (WSW-69)
+.: WSW: BugFix: Preview page in mobile size (WSW-72)
 
 ---------------------------------------------
 - 2020-07-11                                -
